salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Otter. Number of the associated customer order</description>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of the order for which a task was created</inlineHelpText>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>