salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Otter_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Otter_Account_Name__c</fullName>
    <formula>vlocity_cmt__OrderItemId__r.Order.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>