salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Otter_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Otter_Order_Number__c</fullName>
    <description>[Otter] Used for manual queue UI</description>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>