salesforce_sfdx/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <description>Otter. Record URL, used in email templates</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record URL, used in email templates</inlineHelpText>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>